manifests/base/resources/users/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: users
    chart: users-2.1.22
    heritage: Helm
    release: users
  name: users
  namespace: $(NAMESPACE)
spec:
  ports:
  - name: users
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: users
    release: users
  type: ClusterIP
---
